--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-use-password-validator": "^0.0.1",
     "reactjs-input-validator": "^0.16.4",
     "web-vitals": "^2.1.4"
   },
